# Auto_Commit

./: .gitignore  CHANGELOG.md  HƯỚNG_DẪN_SỬ_DỤNG.md  README.md  Trading_Bot.ipynb  USER_GUIDE.md  auto-commit-absolute.bat  auto-commit-setup.bat  auto-commit-simple.bat  auto-commit.bat  auto_commit.bat  auto_commit.py  auto_commit_gui.bat  auto_commit_gui.py  auto_commit_gui.sh  build-installer.bat  commit_history.txt  config.py  create-installer.iss  debug-extension.bat  debug-extension.ps1  debug-install-fix.bat  debug-install.bat  example.txt  example2.txt  feature.md  file_monitor.py  git_handler.py  install-all-in-one-fix.bat  install-all-in-one.bat  install-extension.bat  main.py  new_feature.md  package-extension.bat  package-extension.ps1  package.json  pyproject.toml  quick-install.bat  requirements.txt  run-all.bat  (+14 more)
README.md-1/: index.ts                # Main entry point  utils
README.md-1/generator/: message-builder.ts  # Build commit messages
README.md-1/integration/: workflow.test.ts
README.md-1/unit/: analyzer.test.ts  generator.test.ts  git.test.ts
auto-commit/utils/: constants.py
config/: settings.yaml
extension/: HƯỚNG_DẪN.md  LICENSE  README.md  package-lock.json  package.json  run-dev.ps1
extension/src/: extension.ts
scripts/: auto-commit.ps1
src/: extension.ts  main.py
src/auto_commit/: __main__.py  cli.py
src/core/: file_watcher.py  git_handler.py
src/services/: commitTemplateService.ts  configService.ts  gitService.ts  historyService.ts  statusBar.ts  webviewService.ts
src/utils/: config.py
tests/: conftest.py
(+9 files in other folders)
