[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-commit"
version = "0.1.0"
description = "Auto commit changes to git repository"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "watchdog>=3.0.0",
    "GitPython>=3.1.37",
    "PyGithub>=2.1.1",
    "PyYAML>=6.0.1",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "PyQt6>=6.4.0",
]

[project.scripts]
auto-commit = "auto_commit.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/auto_commit"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3 